--- a/index.html
+++ b/index.html
@@ -159,7 +159,53 @@
             </section>
 
             <!--==================== ABOUT ====================-->
-            <section class="about section" id="about"></section>
+            <section class="about section" id="about">
+                <h2 class="section__title">About me</h2>
+                <span class="section__subtitle">Introduction</span>
+                <div class="about__container container grid">
+                    <img src="assets/img/about.jpg" alt="About me" class="about__img" />
+
+                    <div class="about__data">
+                        <p class="about__description">
+                            Web developer, with extensive knowledge and years of experience, working
+                            in web technologies and Ui / Ux design, delivering quality work.
+                        </p>
+
+                        <div class="about__info">
+                            <div>
+                                <span class="about__info-title">08+</span>
+                                <span class="about__info-name"
+                                    >Years <br />
+                                    experience</span
+                                >
+                            </div>
+                            <div>
+                                <span class="about__info-title">20+</span>
+                                <span class="about__info-name"
+                                    >Completed <br />
+                                    project</span
+                                >
+                            </div>
+                            <div>
+                                <span class="about__info-title">05+</span>
+                                <span class="about__info-name"
+                                    >Companies <br />
+                                    worked</span
+                                >
+                            </div>
+                        </div>
+                        <div class="about__buttons">
+                            <a
+                                download=""
+                                href="assets/pdf/Alexa-Cv.pdf"
+                                class="button button--flex"
+                            >
+                                Download CV<i class="uil uil-download-alt button__icon"></i
+                            ></a>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
             <!--==================== SKILLS ====================-->
             <section class="skills section" id="skills"></section>
