--- a/index.html
+++ b/index.html
@@ -220,9 +220,7 @@
                                 <i class="uil uil-globe skills__icon"></i>
                                 <div>
                                     <h1 class="skills__title">Frontend developer</h1>
-                                    <span class="skills__subtitle"
-                                        >More than 4 <years></years
-                                    ></span>
+                                    <span class="skills__subtitle">More than 4 years</span>
                                 </div>
                                 <i class="uil uil-angle-down skills__arrow"></i>
                             </div>
@@ -278,9 +276,7 @@
                                 <i class="uil uil-server-network skills__icon"></i>
                                 <div>
                                     <h1 class="skills__title">Backend developer</h1>
-                                    <span class="skills__subtitle"
-                                        >More than 2 <years></years
-                                    ></span>
+                                    <span class="skills__subtitle">More than 2 years </span>
                                 </div>
                                 <i class="uil uil-angle-down skills__arrow"></i>
                             </div>
@@ -339,9 +335,7 @@
                                 <i class="uil uil-palette skills__icon"></i>
                                 <div>
                                     <h1 class="skills__title">Backend developer</h1>
-                                    <span class="skills__subtitle"
-                                        >More than 3 <years></years
-                                    ></span>
+                                    <span class="skills__subtitle">More than 3 years </span>
                                 </div>
                                 <i class="uil uil-angle-down skills__arrow"></i>
                             </div>
