--- a/index.html
+++ b/index.html
@@ -385,11 +385,14 @@
 
                 <div class="qualification__container container">
                     <div class="qualification__tabs">
-                        <div class="qualification__button button--flex">
+                        <div
+                            class="qualification__button button--flex qualification__active"
+                            data-target="#education"
+                        >
                             <i class="uil uil-graduation-cap qualification__icon"></i>
                             Education
                         </div>
-                        <div class="qualification__button button--flex">
+                        <div class="qualification__button button--flex" data-target="#work">
                             <i class="uil uil-briefcase-alt qualification__icon"></i>
                             Work
                         </div>
@@ -397,7 +400,11 @@
 
                     <div class="qualification__sections">
                         <!--==================== QUALIFICATION CONTENT I ====================-->
-                        <div class="qualification__content">
+                        <div
+                            class="qualification__content qualification__active"
+                            data-content
+                            id="education"
+                        >
                             <!--==================== QUALIFICATION DATA I ====================-->
                             <div class="qualification__data">
                                 <div>
@@ -468,7 +475,7 @@
                         </div>
 
                         <!--==================== QUALIFICATION CONTENT II ====================-->
-                        <div class="qualification__content">
+                        <div class="qualification__content" data-content id="work">
                             <!--==================== QUALIFICATION DATA I ====================-->
                             <div class="qualification__data">
                                 <div>
