#add: services css

--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
                             class="button button--flex button--small button--link services__button"
                         >
                             View more
-                            <i class="uil uil-arrow-right services__icon"></i>
+                            <i class="uil uil-arrow-right button__icon"></i>
                         </span>
 
                         <div class="services__modal">
@@ -564,19 +564,19 @@
 
                                 <ul class="services__modal-services grid">
                                     <li class="services__modal-service">
-                                        <i class="uil uil-check-circle"></i>
+                                        <i class="uil uil-check-circle services__modal-icon"></i>
                                         <p>I develop the user interface.</p>
                                     </li>
                                     <li class="services__modal-service">
-                                        <i class="uil uil-check-circle"></i>
+                                        <i class="uil uil-check-circle services__modal-icon"></i>
                                         <p>Web page development.</p>
                                     </li>
                                     <li class="services__modal-service">
-                                        <i class="uil uil-check-circle"></i>
+                                        <i class="uil uil-check-circle services__modal-icon"></i>
                                         <p>I create ux element interactions.</p>
                                     </li>
                                     <li class="services__modal-service">
-                                        <i class="uil uil-check-circle"></i>
+                                        <i class="uil uil-check-circle services__modal-icon"></i>
                                         <p>I position your company brand.</p>
                                     </li>
                                 </ul>
@@ -599,7 +599,7 @@
                             class="button button--flex button--small button--link services__button"
                         >
                             View more
-                            <i class="uil uil-arrow-right services__icon"></i>
+                            <i class="uil uil-arrow-right button__icon"></i>
                         </span>
 
                         <div class="services__modal">
@@ -613,19 +613,19 @@
 
                                 <ul class="services__modal-services grid">
                                     <li class="services__modal-service">
-                                        <i class="uil uil-check-circle"></i>
+                                        <i class="uil uil-check-circle services__modal-icon"></i>
                                         <p>I develop the user interface.</p>
                                     </li>
                                     <li class="services__modal-service">
-                                        <i class="uil uil-check-circle"></i>
+                                        <i class="uil uil-check-circle services__modal-icon"></i>
                                         <p>Web page development.</p>
                                     </li>
                                     <li class="services__modal-service">
-                                        <i class="uil uil-check-circle"></i>
+                                        <i class="uil uil-check-circle services__modal-icon"></i>
                                         <p>I create ux element interactions.</p>
                                     </li>
                                     <li class="services__modal-service">
-                                        <i class="uil uil-check-circle"></i>
+                                        <i class="uil uil-check-circle services__modal-icon"></i>
                                         <p>I position your company brand.</p>
                                     </li>
                                 </ul>
@@ -648,7 +648,7 @@
                             class="button button--flex button--small button--link services__button"
                         >
                             View more
-                            <i class="uil uil-arrow-right services__icon"></i>
+                            <i class="uil uil-arrow-right button__icon"></i>
                         </span>
 
                         <div class="services__modal">
@@ -662,19 +662,19 @@
 
                                 <ul class="services__modal-services grid">
                                     <li class="services__modal-service">
-                                        <i class="uil uil-check-circle"></i>
+                                        <i class="uil uil-check-circle services__modal-icon"></i>
                                         <p>I develop the user interface.</p>
                                     </li>
                                     <li class="services__modal-service">
-                                        <i class="uil uil-check-circle"></i>
+                                        <i class="uil uil-check-circle services__modal-icon"></i>
                                         <p>Web page development.</p>
                                     </li>
                                     <li class="services__modal-service">
-                                        <i class="uil uil-check-circle"></i>
+                                        <i class="uil uil-check-circle services__modal-icon"></i>
                                         <p>I create ux element interactions.</p>
                                     </li>
                                     <li class="services__modal-service">
-                                        <i class="uil uil-check-circle"></i>
+                                        <i class="uil uil-check-circle services__modal-icon"></i>
                                         <p>I position your company brand.</p>
                                     </li>
                                 </ul>
