#add: services js

--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
 
                             <h3 class="services__title">
                                 Frontend <br />
-                                Development
+                                Developer
                             </h3>
                         </div>
 
