--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
 
         <!--==================== SWIPER CSS ====================-->
-        <link rel="stylesheet" href="" />
+        <link rel="stylesheet" href="css/swiper-bundle.min.css" />
 
         <!-- GOOGLE FONT POPPIN -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -685,7 +685,97 @@
             </section>
 
             <!--==================== PORTFOLIO ====================-->
-            <section class="portfolio section" id="portfolio"></section>
+            <section class="portfolio section" id="portfolio">
+                <h2 class="section__title">Portfolio</h2>
+                <span class="section__subtitle">Most recent work</span>
+
+                <div class="portfolio__container container swiper-container">
+                    <div class="swiper-wrapper">
+                        <!--==================== PORTFOLIO 1 ====================-->
+                        <div class="portfolio__content grid swiper-slide">
+                            <img
+                                src="assets/img/portfolio1.jpg"
+                                alt="Portfolio"
+                                class="portfolio__img"
+                            />
+
+                            <div class="portfolio__data">
+                                <h3 class="portfolio__title">Modern Website</h3>
+                                <p class="portfolio__description">
+                                    Website adaptable to all devices, with ui components and
+                                    animated interactions.
+                                </p>
+
+                                <a
+                                    href="#portfolio"
+                                    class="button button--flex button--small portfolio__button"
+                                >
+                                    Demo
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+
+                        <!--==================== PORTFOLIO 2 ====================-->
+                        <div class="portfolio__content grid swiper-slide">
+                            <img
+                                src="assets/img/portfolio2.jpg"
+                                alt="Portfolio"
+                                class="portfolio__img"
+                            />
+
+                            <div class="portfolio__data">
+                                <h3 class="portfolio__title">Branding</h3>
+                                <p class="portfolio__description">
+                                    Website adaptable to all devices, with ui components and
+                                    animated interactions.
+                                </p>
+
+                                <a
+                                    href="#portfolio"
+                                    class="button button--flex button--small portfolio__button"
+                                >
+                                    Demo
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+
+                        <!--==================== PORTFOLIO 3 ====================-->
+                        <div class="portfolio__content grid swiper-slide">
+                            <img
+                                src="assets/img/portfolio3.jpg"
+                                alt="Portfolio"
+                                class="portfolio__img"
+                            />
+
+                            <div class="portfolio__data">
+                                <h3 class="portfolio__title">Online shop</h3>
+                                <p class="portfolio__description">
+                                    Website adaptable to all devices, with ui components and
+                                    animated interactions.
+                                </p>
+
+                                <a
+                                    href="#portfolio"
+                                    class="button button--flex button--small portfolio__button"
+                                >
+                                    Demo
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-button-next">
+                        <i class="uil uil-angle-right-b swiper-arrow-icon"></i>
+                    </div>
+                    <div class="swiper-button-prev">
+                        <i class="uil uil-angle-left-b swiper-arrow-icon"></i>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
+            </section>
 
             <!--==================== PROJECT IN MIND ====================-->
             <section class="project section"></section>
@@ -703,7 +793,7 @@
         <!--==================== SCROLL TOP ====================-->
 
         <!--==================== SWIPER JS ====================-->
-        <script src=""></script>
+        <script src="js/swiper-bundle.min.js"></script>
 
         <!--==================== MAIN JS ====================-->
         <script src="js/main.js"></script>
