#add: testimonial html structure

--- a/index.html
+++ b/index.html
@@ -798,7 +798,107 @@
             </section>
 
             <!--==================== TESTIMONIAL ====================-->
-            <section class="testimonial section"></section>
+            <section class="testimonial section">
+                <h2 class="section__title">Testimonial</h2>
+                <span class="section__subtitle">My client feedback</span>
+
+                <div class="testimonial__container container">
+                    <div>
+                        <!--==================== TESTIMONIAL I ====================-->
+                        <div class="testimonial__content">
+                            <div class="testimonial__data">
+                                <div class="testimonial__header">
+                                    <img
+                                        src="assets/img/testimonial1.jpg"
+                                        alt="Testimonial 1"
+                                        class="testimonial__img"
+                                    />
+
+                                    <div>
+                                        <h3 class="testimonial__name">Sara Smith</h3>
+                                        <span class="testimonial__client">Client</span>
+                                    </div>
+                                </div>
+
+                                <div>
+                                    <i class="uil uil-star testimonial__icon-star"></i>
+                                    <i class="uil uil-star testimonial__icon-star"></i>
+                                    <i class="uil uil-star testimonial__icon-star"></i>
+                                    <i class="uil uil-star testimonial__icon-star"></i>
+                                    <i class="uil uil-star testimonial__icon-star"></i>
+                                </div>
+                            </div>
+
+                            <p class="testimonial__description">
+                                I get a good impression, I carry out my project with all the
+                                possible quality and attention and support 24 hours a day.
+                            </p>
+                        </div>
+
+                        <!--==================== TESTIMONIAL II ====================-->
+                        <div class="testimonial__content">
+                            <div class="testimonial__data">
+                                <div class="testimonial__header">
+                                    <img
+                                        src="assets/img/testimonial2.jpg"
+                                        alt="Testimonial 1"
+                                        class="testimonial__img"
+                                    />
+
+                                    <div>
+                                        <h3 class="testimonial__name">John Doe</h3>
+                                        <span class="testimonial__client">Client</span>
+                                    </div>
+                                </div>
+
+                                <div>
+                                    <i class="uil uil-star testimonial__icon-star"></i>
+                                    <i class="uil uil-star testimonial__icon-star"></i>
+                                    <i class="uil uil-star testimonial__icon-star"></i>
+                                    <i class="uil uil-star testimonial__icon-star"></i>
+                                    <i class="uil uil-star testimonial__icon-star"></i>
+                                </div>
+                            </div>
+
+                            <p class="testimonial__description">
+                                I get a good impression, I carry out my project with all the
+                                possible quality and attention and support 24 hours a day.
+                            </p>
+                        </div>
+
+                        <!--==================== TESTIMONIAL I====================-->
+                        <div class="testimonial__content">
+                            <div class="testimonial__data">
+                                <div class="testimonial__header">
+                                    <img
+                                        src="assets/img/testimonial3.jpg"
+                                        alt="Testimonial 1"
+                                        class="testimonial__img"
+                                    />
+
+                                    <div>
+                                        <h3 class="testimonial__name">Eros Daniel</h3>
+                                        <span class="testimonial__client">Client</span>
+                                    </div>
+                                </div>
+
+                                <div>
+                                    <i class="uil uil-star testimonial__icon-star"></i>
+                                    <i class="uil uil-star testimonial__icon-star"></i>
+                                    <i class="uil uil-star testimonial__icon-star"></i>
+                                    <i class="uil uil-star testimonial__icon-star"></i>
+                                    <i class="uil uil-star testimonial__icon-star"></i>
+                                </div>
+                            </div>
+
+                            <p class="testimonial__description">
+                                I get a good impression, I carry out my project with all the
+                                possible quality and attention and support 24 hours a day.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
             <!--==================== CONTACT ME ====================-->
             <section class="contact section" id="contact"></section>
