#add: testimonial swiper js

--- a/index.html
+++ b/index.html
@@ -802,10 +802,10 @@
                 <h2 class="section__title">Testimonial</h2>
                 <span class="section__subtitle">My client feedback</span>
 
-                <div class="testimonial__container container">
-                    <div>
+                <div class="testimonial__container container swiper-container">
+                    <div class="swiper-wrapper">
                         <!--==================== TESTIMONIAL I ====================-->
-                        <div class="testimonial__content">
+                        <div class="testimonial__content swiper-slide">
                             <div class="testimonial__data">
                                 <div class="testimonial__header">
                                     <img
@@ -836,7 +836,7 @@
                         </div>
 
                         <!--==================== TESTIMONIAL II ====================-->
-                        <div class="testimonial__content">
+                        <div class="testimonial__content swiper-slide">
                             <div class="testimonial__data">
                                 <div class="testimonial__header">
                                     <img
@@ -867,7 +867,7 @@
                         </div>
 
                         <!--==================== TESTIMONIAL I====================-->
-                        <div class="testimonial__content">
+                        <div class="testimonial__content swiper-slide">
                             <div class="testimonial__data">
                                 <div class="testimonial__header">
                                     <img
@@ -897,6 +897,8 @@
                             </p>
                         </div>
                     </div>
+
+                    <div class="swiper-pagination swiper-pagination-testimonial"></div>
                 </div>
             </section>
 
