#add: footer html structure

--- a/index.html
+++ b/index.html
@@ -980,7 +980,54 @@
         </main>
 
         <!--==================== FOOTER ====================-->
-        <footer class="footer"></footer>
+        <footer class="footer">
+            <div class="footer__bg">
+                <div class="footer__container container grid">
+                    <div>
+                        <h1 class="footer__title">Alexa</h1>
+                        <span class="footer__subtitle">Frontend Developer</span>
+                    </div>
+
+                    <ul class="footer__links">
+                        <li><a href="#services" class="footer__link"></a></li>
+                        <li><a href="#portfolio" class="footer__link"></a></li>
+                        <li><a href="#contact" class="footer__link"></a></li>
+                    </ul>
+
+                    <div class="footer__socials">
+                        <a
+                            href="https://www.facebook.com/"
+                            class="footer__social"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                        >
+                            <i class="uil uil-facebook-f"></i>
+                        </a>
+                        <a
+                            href="https://www.instagram.com/"
+                            class="footer__social"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                        >
+                            <i class="uil uil-instagram"></i>
+                        </a>
+                        <a
+                            href="https://twitter.com/"
+                            class="footer__social"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                        >
+                            <i class="uil uil-twitter-alt"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <p class="footer__copy">
+                    copyright&copy; 2021. All right reserved. <br />
+                    Developed by Htut Wai Phyoe | Designed by Bedimcode
+                </p>
+            </div>
+        </footer>
 
         <!--==================== SCROLL TOP ====================-->
 
