#add: footer css

--- a/index.html
+++ b/index.html
@@ -989,9 +989,9 @@
                     </div>
 
                     <ul class="footer__links">
-                        <li><a href="#services" class="footer__link"></a></li>
-                        <li><a href="#portfolio" class="footer__link"></a></li>
-                        <li><a href="#contact" class="footer__link"></a></li>
+                        <li><a href="#services" class="footer__link">Services</a></li>
+                        <li><a href="#portfolio" class="footer__link">Portfolio</a></li>
+                        <li><a href="#contact" class="footer__link">Contact me</a></li>
                     </ul>
 
                     <div class="footer__socials">
@@ -1023,8 +1023,8 @@
                 </div>
 
                 <p class="footer__copy">
-                    copyright&copy; 2021. All right reserved. <br />
-                    Developed by Htut Wai Phyoe | Designed by Bedimcode
+                    Copyright &copy; 2021. All right reserved. <br />
+                    Developed by HWP | Designed by Bedimcode
                 </p>
             </div>
         </footer>
