#add: scroll tracker

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list grid">
                         <li class="nav__item">
-                            <a href="#home" class="nav__link">
+                            <a href="#home" class="nav__link active-link">
                                 <i class="uil uil-estate nav__icon"></i>Home
                             </a>
                         </li>
@@ -1023,7 +1023,7 @@
                 </div>
 
                 <p class="footer__copy">
-                    Copyright &copy; 2021. All right reserved. <br />
+                    Copyright&copy; 2021. All right reserved. <br />
                     Developed by HWP | Designed by Bedimcode
                 </p>
             </div>
