#add: scroll up

--- a/index.html
+++ b/index.html
@@ -1030,7 +1030,9 @@
         </footer>
 
         <!--==================== SCROLL TOP ====================-->
-
+        <a href="#" class="scrollUp" id="scrollUp">
+            <i class="uil uil-arrow-up scrollUp__icon"></i>
+        </a>
         <!--==================== SWIPER JS ====================-->
         <script src="js/swiper-bundle.min.js"></script>
 
