#add: media queries

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!--==================== CSS ====================-->
         <link rel="stylesheet" href="css/styles.css" />
 
-        <title>Portfolio</title>
+        <title>Alexa Design</title>
     </head>
     <body>
         <!--==================== HEADER ====================-->
@@ -709,7 +709,11 @@
 
                                 <a
                                     href="#portfolio"
-                                    class="button button--flex button--small portfolio__button"
+                                    class="
+                                        button button--flex button--small
+                                        portfolio__button
+                                        button--link
+                                    "
                                 >
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
@@ -734,7 +738,11 @@
 
                                 <a
                                     href="#portfolio"
-                                    class="button button--flex button--small portfolio__button"
+                                    class="
+                                        button button--flex button--small
+                                        portfolio__button
+                                        button--link
+                                    "
                                 >
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
@@ -759,7 +767,11 @@
 
                                 <a
                                     href="#portfolio"
-                                    class="button button--flex button--small portfolio__button"
+                                    class="
+                                        button button--flex button--small
+                                        portfolio__button
+                                        button--link
+                                    "
                                 >
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
@@ -992,7 +1004,7 @@
                     <ul class="footer__links">
                         <li><a href="#services" class="footer__link">Services</a></li>
                         <li><a href="#portfolio" class="footer__link">Portfolio</a></li>
-                        <li><a href="#contact" class="footer__link">Contact me</a></li>
+                        <li><a href="#contact" class="footer__link">Contact</a></li>
                     </ul>
 
                     <div class="footer__socials">
@@ -1036,6 +1048,8 @@
         </a>
         <!--==================== SWIPER JS ====================-->
         <script src="js/swiper-bundle.min.js"></script>
+        <!--==================== SCROLL REVEAL JS ====================-->
+        <script src="js/scrollreveal.min.js"></script>
 
         <!--==================== MAIN JS ====================-->
         <script src="js/main.js"></script>
