#add: scroll reveal

--- a/index.html
+++ b/index.html
@@ -921,7 +921,7 @@
                 <span class="section__subtitle">Get in touch</span>
 
                 <div class="contact__container container grid">
-                    <div>
+                    <div class="contact__informations">
                         <!--==================== CONTACT 1 ====================-->
                         <div class="contact__information">
                             <i class="uil uil-phone contact__icon"></i>
@@ -996,7 +996,7 @@
         <footer class="footer">
             <div class="footer__bg">
                 <div class="footer__container container grid">
-                    <div>
+                    <div class="footer__data">
                         <h1 class="footer__title">Alexa</h1>
                         <span class="footer__subtitle">Frontend Developer</span>
                     </div>
