--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                             <div class="skills__header">
                                 <i class="uil uil-palette skills__icon"></i>
                                 <div>
-                                    <h1 class="skills__title">Backend developer</h1>
+                                    <h1 class="skills__title">UI/UX Designer</h1>
                                     <span class="skills__subtitle">More than 3 years </span>
                                 </div>
                                 <i class="uil uil-angle-down skills__arrow"></i>
