#add: README.md

--- a/index.html
+++ b/index.html
@@ -953,30 +953,30 @@
                         </div>
                     </div>
 
-                    <form action="" class="contact__form grid">
+                    <form class="contact__form grid">
                         <div class="contact__inputs grid">
                             <div class="contact__content">
-                                <label for="" class="contact__label">Name</label>
-                                <input type="text" class="contact__input" />
+                                <label for="name" class="contact__label">Name</label>
+                                <input type="text" class="contact__input" id="name" />
                             </div>
                             <div class="contact__content">
-                                <label for="" class="contact__label">Email</label>
-                                <input type="email" class="contact__input" />
+                                <label for="email" class="contact__label">Email</label>
+                                <input type="email" class="contact__input" id="email" />
                             </div>
                         </div>
 
                         <div class="contact__content">
-                            <label for="" class="contact__label">Project</label>
-                            <input type="text" class="contact__input" />
+                            <label for="project" class="contact__label">Project</label>
+                            <input type="text" class="contact__input" id="project" />
                         </div>
 
                         <div class="contact__content">
-                            <label for="" class="contact__label">Message</label>
+                            <label for="message" class="contact__label">Message</label>
                             <textarea
-                                name=""
-                                id=""
+                                name="message"
+                                id="message"
                                 cols="0"
-                                rows="7 "
+                                rows="7"
                                 class="contact__input"
                             ></textarea>
                         </div>
